src/test/deca/context/invalid/test_ident_attribute.deca
// Description:
//    Programme testant la declaration d'un champ avec un identificateur qui existe déjà pour une methode
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
// Resultats:
//    test_context : erreur ligne 16 : The identifier x already exists and it is not an attribute
class A  {
	int x(){
		return 2;
	}
}

class B extends A {
	int x;
}

{
	A a = new A();
	println("hello");
	
}
